tests/NormalTests/paczka1/fuzzy1/30503146.err
Error in line 2: Wm7r S758 85,2
Error in line 1: 6yAJ0 S758 44,8
Error in line 9: DZYWmKNyk A825 0,3
Error in line 3: Wm7r S274 30,5
Error in line 18: DZYWmKNyk A716 26,3
Error in line 24: Wm7r S758 133,90
Error in line 22: S274 S274 15,9
Error in line 38: 6yAJ0 S274 7,7
